# CustomGroupingPBI

./: Implementation_Plan.md  README.md  pyproject.toml  requirements.txt  test_structure.py  tmdl_direct_gui.py  tmdl_editor.py  tmdl_editor_gui.py
backend/: __init__.py  dax_info_views.py  model_connector.py  model_updater.py  tabular_editor_cli.py  tmdl_direct_editor.py
cli/: __init__.py  tmdl_cli.py
data/: app_config.json  sample_groupings.json  sample_groupings.xlsx  sample_groupings_fixed.json
gui/: __init__.py  grouping_editor.py  main_window.py  model_explorer.py  model_selector.py  port_checker.py  theme_manager.py
tests/: __init__.py  run_tests.py  test_app.py
utils/: __init__.py  config.py  io_excel.py  io_json.py  logger.py
